--- a/aDVanceERP.BluetoothScanner/Resources/layout/activity_main.xml
+++ b/aDVanceERP.BluetoothScanner/Resources/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -50,8 +51,9 @@
             android:textStyle="bold"/>
     </LinearLayout>
 
-    <!-- Campo de dirección IP -->
+    <!-- Campo de dirección IP y puerto -->
     <LinearLayout
+        android:id="@+id/layoutDireccionPuerto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -77,36 +79,25 @@
             android:textColor="@android:color/black"
             android:background="@android:color/white"
             android:padding="8dp"/>
-    </LinearLayout>
 
-    <!-- Campo del puerto -->
-    <LinearLayout
-      android:id="@+id/portText"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:orientation="horizontal"
-      android:layout_marginBottom="16dp"
-      android:padding="8dp"
-      android:gravity="center_vertical">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Puerto:"
+            android:textSize="14sp"
+            android:textColor="@android:color/black"
+            android:layout_marginRight="8dp"/>
 
-      <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Puerto:"
-        android:textSize="14sp"
-        android:textColor="@android:color/black"
-        android:layout_marginRight="8dp"/>
-
-      <EditText
-        android:id="@+id/portText"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="9002"
-        android:textSize="14sp"
-        android:textColor="@android:color/black"
-        android:background="@android:color/white"
-        android:padding="8dp"/>
+        <EditText
+            android:id="@+id/portText"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="9002"
+            android:textSize="14sp"
+            android:textColor="@android:color/black"
+            android:background="@android:color/white"
+            android:padding="8dp"/>
     </LinearLayout>
 
     <!-- Botón Conectar -->
