--- a/aDVanceERP.BluetoothScanner/Resources/layout/activity_main.xml
+++ b/aDVanceERP.BluetoothScanner/Resources/layout/activity_main.xml
@@ -44,7 +44,7 @@
             android:layout_height="wrap_content"
             android:text="SCANNER"
             android:textSize="24sp"
-            android:textColor="@android:color/white"
+            android:textColor="#FAFAFA"
             android:background="#B22222"
             android:paddingLeft="8dp"
             android:paddingRight="8dp"
@@ -70,14 +70,14 @@
             android:layout_marginRight="8dp"/>
 
         <EditText
-            android:id="@+id/ipAddressText"
+            android:id="@+id/fieldDireccionIp"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="0.7"
             android:text="192.168.1."
             android:textSize="14sp"
             android:textColor="@android:color/black"
-            android:background="@android:color/white"
+            android:background="#FAFAFA"
             android:padding="8dp"/>
 
         <TextView
@@ -89,14 +89,14 @@
             android:layout_marginRight="8dp"/>
 
         <EditText
-            android:id="@+id/portText"
+            android:id="@+id/fieldPuerto"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="0.3"
             android:text="9002"
             android:textSize="14sp"
             android:textColor="@android:color/black"
-            android:background="@android:color/white"
+            android:background="#FAFAFA"
             android:padding="8dp"/>
     </LinearLayout>
 
@@ -148,9 +148,9 @@
         android:layout_height="wrap_content"
         android:text="Ninguno"
         android:textSize="14sp"
-        android:textColor="#FF0000FF"
+        android:textColor="#B22222"
         android:padding="8dp"
-        android:background="@android:color/white"
+        android:background="#FAFAFA"
         android:layout_marginBottom="16dp"/>
 
     <!-- Historial de escaneos -->
@@ -164,9 +164,9 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:background="@android:color/white"
+        android:background="#FAFAFA"
         android:padding="8dp">
 
         <LinearLayout
