Refactorización de código. Estructuración de código y segregación de responsabilidades

--- a/aDVanceERP.BluetoothScanner/Resources/layout/activity_main.xml
+++ b/aDVanceERP.BluetoothScanner/Resources/layout/activity_main.xml
@@ -173,7 +173,7 @@
         android:padding="8dp">
 
         <LinearLayout
-            android:id="@+id/historyContainer"
+            android:id="@+id/layoutHistorial"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"/>
