--- a/aDVancePOS.Mobile/Resources/layout/producto_vendido_item.xml
+++ b/aDVancePOS.Mobile/Resources/layout/producto_vendido_item.xml
@@ -22,7 +22,7 @@
       android:layout_weight="0.5"
       android:textSize="14sp"
       android:gravity="center"
-      android:textColor="#2196F3"
+      android:textColor="#000000"
       android:textStyle="bold"/>
 
   <TextView
