--- a/aDVancePOS.Mobile/Resources/layout/activity_main.xml
+++ b/aDVancePOS.Mobile/Resources/layout/activity_main.xml
@@ -243,14 +243,17 @@
           android:textColor="#000000"
           android:layout_marginStart="4dp"/>
 
-      <Button
+      <ImageButton
           android:id="@+id/btnExportar"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
+          android:layout_width="54dp"
+          android:layout_height="match_parent"
+          android:layout_marginStart="8dp"
           android:text="Exportar"
+          android:src="@drawable/json_download_24px"
           android:background="@drawable/rounded_button"
           android:textColor="#000000"
-          android:layout_marginStart="8dp"/>
+          android:scaleType="center"
+          android:padding="8dp"/>
     </LinearLayout>
   </LinearLayout>
 </LinearLayout>
